--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,13 @@
             <version>3.4.0</version>
         </dependency>
 
+        <!-- Yandex AShot -->
+        <dependency>
+            <groupId>ru.yandex.qatools.ashot</groupId>
+            <artifactId>ashot</artifactId>
+            <version>1.5.2</version>
+        </dependency>
+
         <!--Allure TestNG Adaptor -->
         <dependency>
             <groupId>ru.yandex.qatools.allure</groupId>
